<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">UCR Ebook Reader</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="Welcome">Welcome!</string>
    <string name="action_shop">Shop</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Log out</string>
    <string name="action_login">Log in</string>
    <string name="powered_by">Powered by</string>
    <string name="Parse">Parse</string>
	<string name="SearchBtn">Search</string>
    <string name="TextHereView">Enter Text Here</string>
    <string name="BrowseBtn">Browse By Categories</string>
    <string name="Horror">Horror</string>
    <string name="Action">Action</string>
    <string name="Biology">Biology</string>
    <string name="Romance">Romance</string>
    <string name="Fantasy">Fantasy</string>

</resources>