<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtwelcome"
        android:layout_centerHorizontal="true" />
    
    <TextView
        android:id="@+id/textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="@string/powered_by"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textview_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/Parse"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    

    <!--Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/LogoutBtn" />-->

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:text="@string/Welcome"
        android:textSize="25sp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textview_1"
        android:layout_toRightOf="@+id/txtwelcome"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/reckless_viscount" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton3"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_toLeftOf="@+id/txtwelcome"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/hp1" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton1"
        android:layout_alignTop="@+id/imageButton4"
        android:layout_toLeftOf="@+id/txtwelcome"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/let_the_storms_break" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton3"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/globalforest" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton3"
        android:layout_alignLeft="@+id/txtwelcome"
        android:layout_alignRight="@+id/txtwelcome"
        android:layout_alignTop="@+id/imageButton4"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/flintlord" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageButton3"
        android:layout_alignLeft="@+id/imageButton5"
        android:layout_alignTop="@+id/imageButton3"
        android:layout_toLeftOf="@+id/imageButton3"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/hauntedway" />

</RelativeLayout>